# tigeroption

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mock_server.py  pyproject.toml  test_tiger_api.py  test_tiger_format.py
config/: settings.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: DashboardClient.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: AIInsightPanel.tsx  BacktestModal.tsx  DirectionTag.tsx  FilterBar.tsx  FlowCard.tsx  FlowTable.tsx  GEXChart.tsx  Navbar.tsx  OIDistributionChart.tsx  OptionChainHeatmap.tsx  ScoreBadge.tsx  SentimentBar.tsx  Sidebar.tsx  TradingViewChart.tsx  WatchlistManager.tsx
frontend/src/hooks/: useFlowStream.ts  useFlows.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/store/: flowStore.ts  watchlistStore.ts
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_iv_and_returns.py  003_add_is_abnormal.py
scripts/: init_db.sql
services/api/: celery_tasks.py  main.py  websocket_manager.py  wechat_pusher.py
services/api/models/: alert_rule.py  database.py  option_flow.py
services/api/routers/: abnormal.py  alerts.py  analysis.py  backtest.py  flows.py  search.py  sentiment.py  watchlist.py
services/api/schemas/: alert.py  (+1 more)
services/collector/: main.py  option_chain_poller.py  publisher.py  rate_limiter.py  tiger_client.py  websocket_subscriber.py
services/mcp/: server.py
services/processor/: accumulation_tracker.py  ai_interpreter.py  consumer.py  db_writer.py  main.py  scoring.py  sweep_detector.py
(+5 files in other folders)
